--- a/index.html
+++ b/index.html
@@ -1816,5 +1816,8 @@ function playAmmoSound() {
             }
         }
     </script>
+     <div style="position: fixed; bottom: 5px; right: 5px; font-size: 12px; opacity: 0.5;">
+        <a href="/admin" target="_blank">Admin</a>
+    </div>
 </body>
 </html>
