--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #87CEEB;
         }
         .container {
             max-width: 1200px;
@@ -516,7 +516,7 @@
         });
     </script>
    <div style="position: fixed; bottom: 5px; right: 5px; font-size: 12px; opacity: 0.5;">
-    <a href="/" target="_blank">Game</a>
+    <a href="/" >Game</a>
 </div>
 </body>
 </html>
