--- a/index.html
+++ b/index.html
@@ -2451,7 +2451,7 @@ function playSound(soundFile, volume = 0.5) {
 }
     </script>
      <div style="position: fixed; bottom: 5px; right: 5px; font-size: 12px; opacity: 0.5;">
-        <a href="/admin" target="_blank">Admin</a>
+        <a href="/admin" >Admin</a>
     </div>
     
 </body>
