Added differnt sprites for trees and rocks

--- a/index.html
+++ b/index.html
@@ -632,10 +632,10 @@ for (let i = 1; i <= 16; i++) {
     fishSprites[`fish${i}`] = new Image();
     fishSprites[`fish${i}`].src = `/fish${i}.png`; // Create these images or use placeholders
 }
-        treeSprite.src = '/tree.png'; // Create this image or use a placeholder
+        treeSprite.src = '/pine_tree_Show.png'; // Create this image or use a placeholder
         
         const rockSprite = new Image();
-        rockSprite.src = '/rock.png'; // Create this image or use a placeholder
+        rockSprite.src = '/Snow_rocks.png'; // Create this image or use a placeholder
         
         const coinSprite = new Image();
         coinSprite.src = '/coin.png'; // Create this image or use a placeholder
