added another song

--- a/index.html
+++ b/index.html
@@ -5112,7 +5112,8 @@ function setupGameMusic() {
         '/Hateno-Village.mp3',
         '/Kass.mp3',
         '/Sidons-Theme.mp3',
-        '/House-Theme.mp3'
+        '/House-Theme.mp3',
+        '/aria-math.mp3'
     ];
     
     // Track state
