revised some parts

--- a/admin.html
+++ b/admin.html
@@ -366,7 +366,7 @@
                 usersList.appendChild(row);
             });
             
-            // Add event listeners to edit and delete buttons
+            // Event listeners to edit and delete buttons
             document.querySelectorAll('.edit-btn').forEach(button => {
                 button.addEventListener('click', () => openEditModal(button.dataset.id));
             });
